# QR-Bar-Code-Generator

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
QR-Bar-Code-Generator/: Main.pyw
